--- a/lesson01/styles/media-query-large.css
+++ b/lesson01/styles/media-query-large.css
@@ -1,10 +1,31 @@
 @media screen and (min-width: 500px) {
-    header {
-        background-color: black;
-        color: white;
+    body {
+        font-family: 'Roboto', sans-serif;
+    }
+
+    header,
+    main,
+    footer {
+        max-width: 640px;
+        margin: 1rem auto;
+        border: 1px solid #bbb;
+        padding: 1rem;
+        background-color: #e6f2ff;
     }
 
     main {
-        grid-template-columns: 1fr 1fr;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 1rem;
     }
+
+    section {
+        padding: 1rem;
+        background-color: #fff;
+    }
+}
+
+main {
+    grid-template-columns: 1fr 1fr;
+}
 }
